# kaggle

./: .gitignore
birdclef-2024/: README.md  pyproject.toml
birdclef-2024/notebooks/: birdclef-24-efficientnetb0-pytorch-inference.ipynb  birdclef-24-efficientnetb0-pytorch-train.ipynb
birdclef-2024/src/birdclef_2024/: __init__.py  __main__.py
legacy-playground-series-s4e2/prediction/: light_gbm_0.902_drop_calc.csv  light_gbm_0.903_gs_2.csv  light_gbm_0.904.csv  light_gbm_0.907.csv  light_gbm_optuna_0.909.csv  xgb_0.904_gs.csv  xgb_0.907.csv  xgb_0.908.csv
playground-series-s3e20/: analyze.ipynb  model.py  predict.py  resources.py  visualize.py
playground-series-s3e20/prediction/: DecisionTreeRegressor_20230812150247.csv  Lasso_20230812151413.csv  LinearRegression_20230812151413.csv  MLPRegressor_20230812151332.csv  RandomForestRegressor_20230812150247.csv  Ridge_20230812151413.csv  lgb_20230814011345.csv  xgb_20230814004706.csv  xgb_20230814010408.csv
playground-series-s3e20/submission/: submission_pca2_x1.07_29.321x1.00.csv  submission_pca2_x1.07_29.321x1.05.csv  submission_pca2_x1.07_29.321x1.06.csv  submission_pca2_x1.07_29.321x1.07.csv  submission_pca2_x1.07_29.321x1.08.csv
playground-series-s4e2/: analyze.ipynb  best_hyperparameters.json  constant.py  main.py  processor.py  utils.py
playground-series-s4e2/configs/: mapping.json
playground-series-s4e2/prediction/: light_gbm_0.903_gs.csv  light_gbm_0.905.csv  light_gbm_bmi_0.883.csv  light_gbm_bmi_additional.csv  nn_first_0.841.csv  nn_with_additional_layer_0.850.csv  nn_with_normalization_0.838.csv  (+1 more)
(+11 files in other folders)
